Import fonts instead of hosting them in local files

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <script src="config.js"></script>
   <script src="js/lib-bundle.js"></script>
   <script src="js/app-bundle.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/libstyle-bundle.css">
   <link rel="stylesheet" href="css/style-bundle.css">
 
