--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <script src="js/app-bundle.js"></script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/libstyle-bundle.css">
   <link rel="stylesheet" href="css/style-bundle.css">
 
