Add dynamic page title.

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/libstyle-bundle.css">
   <link rel="stylesheet" href="css/style-bundle.css">
 
-  <title data-ng-bind="i18n.header.title[lang]">JUSTUS</title>
+  <title data-ng-bind="i18n.header.title[pageTitle][lang] + ' - Justus'"></title>
 </head>
 <body>
 
