Change language attribute based on selected language.

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fi" data-ng-app="JustusApp" data-ng-controller="IndexController" data-ng-strict-di>
+<html lang="{{lang}}" data-ng-app="JustusApp" data-ng-controller="IndexController" data-ng-strict-di>
 <head>
   <!-- bootstrap :: the  first 3 must be first -->
   <meta charset="utf-8">
