Add role="main" attribute.

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <div class="container main-container">
       <div class="content-wrapper">
         <div class="header-wrapper" data-ng-include="'html/header.html'"></div>
-        <div class="view-wrapper" data-ui-view=""></div>
+        <div class="view-wrapper" role="main" data-ui-view=""></div>
       </div>
       <div class="footer-wrapper" data-ng-include="'html/footer.html'"></div>
     </div>
