Rename app-bundle (for prevent caching). Load index page always without cache.

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <base href="./">
 
   <script src="js/lib-bundle.js"></script>
-  <script src="js/app-bundle.js"></script>
+  <script src="js/app-bundle-v2.js"></script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;700;900&display=swap" rel="stylesheet">
