--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <meta http-equiv="Expires" content="0">
   <base href="./">
 
-  <script src="js/lib-bundle.js"></script>
+  <script src="js/lib-bundle-v2.js"></script>
   <script src="js/app-bundle-v2.js"></script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
